--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "multer": "^2.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
