--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "start": "npm-run-all --parallel start:frontend start:backend"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "multer": "^2.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
