--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "dependency-cruiser": "^16.10.2",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "madge": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "vite": "^6.3.5"
   }
