Refactor Document Viewer and Add Browse Page
- Removed the old DocumentViewer component and replaced it with a new implementation in DocumentViewerPage.
- Created a new BrowsePage component for displaying source documents with summary generation functionality.
- Added styles for BrowsePage and DocumentViewerPage.
- Updated DocumentManagePage to use the correct sidebar styles.
- Implemented DocumentDetailsPage for displaying individual document details.
- Enhanced DocumentManageSidebar with responsive design.
- Cleaned up and organized imports across various components.

--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "start": "npm-run-all --parallel start:frontend start:backend"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^7.1.0",
     "multer": "^2.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
