feat: add word lookup API endpoint with database caching
- Implemented a new POST endpoint `/lookup` in the dictionary API to fetch word definitions.
- Integrated FreeDictionaryAPI for fetching definitions if not found in the database.
- Added a new schema `WordLookupResponse` for the API response.
- Introduced database model `WordLookup` to store word definitions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]",
- "sqlmodel",
- "fastapi-cors",
- "openai>=1.82.0",
+    "sqlmodel",
+    "fastapi-cors",
+    "openai>=1.82.0",
+    "python-freedictionaryapi[async-client]>=0.9.10",
 ]
