--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ dist
 dist-ssr
 *.local
 
+# Environment files
+.env
+backend/.env
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
