--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^7.1.0",
+    "@mui/lab": "^7.0.0-beta.13",
     "@mui/material": "^7.1.0",
     "multer": "^2.0.0",
     "react": "^19.1.0",
