feat: integrate loguru for enhanced logging across backend services

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,5 @@ dependencies = [
     "passlib[bcrypt]>=1.7.4",
     "python-jose[cryptography]>=3.5.0",
     "bcrypt>=4.3.0",
+    "loguru>=0.7.3",
 ]
