--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,5 @@ dependencies = [
     "python-jose[cryptography]>=3.5.0",
     "bcrypt>=4.3.0",
     "loguru>=0.7.3",
+    "eralchemy[graphviz]>=1.5.0",
 ]
