--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/lab": "^7.0.0-beta.13",
     "@mui/material": "^7.1.0",
+    "@vitest/coverage-v8": "^3.2.3",
     "loglevel": "^1.9.2",
     "multer": "^2.0.0",
     "react": "^19.1.0",
