--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.1",
-    "react-window": "^1.8.11"
+    "react-window": "^1.8.11",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
