feat: remove unused ai-stars assets and refactor AiGenerationButton; update image handling in ChunkImagePanel and ChunkImageDisplay

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,10 @@
         "jsx": "react-jsx",
         "types": [
             "vitest/globals"
+        ],
+        "typeRoots": [
+            "./src/types",
+            "./node_modules/@types"
         ]
     },
     "include": [
