--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.1",
     "react-window": "^1.8.11",
-    "zustand": "^5.0.5",
-    "vite": "^6.3.5"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
