--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/lab": "^7.0.0-beta.13",
     "@mui/material": "^7.1.0",
+    "@types/axios": "^0.9.36",
     "@vitest/coverage-v8": "^3.2.3",
+    "axios": "^1.10.0",
     "loglevel": "^1.9.2",
     "multer": "^2.0.0",
     "react": "^19.1.0",
@@ -35,14 +37,16 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^30.0.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitejs/plugin-react-swc": "^3.10.2",
-    "@vitest/ui": "^3.2.1",
+    "@vitest/ui": "^3.2.4",
     "dependency-cruiser": "^16.10.2",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
