Refactor and enhance application structure
- Updated usePageLogger hook to use unknown type for watched and events options.
- Removed useSourceDocumentDetail hook and migrated its logic to Zustand store.
- Simplified main.tsx by removing AuthProvider and directly using BrowserRouter.
- Refactored HomePage to utilize Zustand for state management of source documents and meta texts.
- Enhanced error handling in HomePage delete handlers with notifications.
- Improved MetaTextDetailPage error handling and rendering logic.
- Updated SourceDocDetailPage to use Zustand for document detail management.
- Modified reviewService to define a structured WordlistResponse type.
- Updated useApi service to handle errors more effectively with getErrorMessage utility.
- Deleted old authStore and replaced it with Zustand-based implementation.
- Created Zustand store for documents management, including source documents and meta texts.
- Introduced Zustand store for meta text detail management.
- Added notification store for global notifications management.
- Created source document detail store for managing document state.
- Defined common error types and utility functions for better error handling.
- Added GlobalNotifications component for displaying notifications throughout the app.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ public/generated_images/
 backend/erd_from_sqlite.pdf
 /graphs
 /coverage
+src/pages/MetaTextPage/Additional Enhancements to Consider.md
