--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "loguru>=0.7.3",
     "eralchemy[graphviz]>=1.5.0",
     "alembic>=1.16.1",
+    "pytest-asyncio>=1.0.0",
 ]
 [tool.alembic]
 
