--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@mui/icons-material": "^7.1.0",
+    "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.1.0",
     "loglevel": "^1.9.2",
     "react": "^19.1.0",
