feat: add type definitions for jest-dom and update vitest version
feat: implement protected routes in App component and enhance routing logic

test: refactor NavBar tests to improve structure and add new assertions

test: update SourceDocInfo tests to remove unnecessary checks and improve clarity

fix: correct navigation path in HomePage tests

chore: add console log to setupTests for debugging purposes

chore: update tsconfig to include jest-dom types for testing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,11 @@
         ],
         // Performance optimizations
         "incremental": true,
-        "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json"
+        "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json",
+        // for testing
+        "types": [
+            "@testing-library/jest-dom"
+        ]
     },
     "include": [
         "src"
