--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "loglevel": "^1.9.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.1",
     "zustand": "^5.0.5"
   },
