--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.1",
+    "react-window": "^1.8.11",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
