feat: update InfoButton to include word prop; enhance WordFlashcardBack and WordFlashcard styles for improved layout; refactor WelcomeText to use Box instead of Paper; adjust HomePage layout for better structure; add nginx_config.pl to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ backend/erd_from_sqlite.pdf
 /coverage
 src/pages/MetaTextPage/Additional Enhancements to Consider.md
 package-lock.json
+nginx_config.pl
