feat: enhance module exports and improve path resolution; add centralized store and utility exports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,8 +49,11 @@
                 "pages/index.ts"
             ],
             "constants/*": [
-                "constants/ui.ts",
-            ]
+                "constants/index.ts",
+            ],
+            "store/*": [
+                "store/index.ts"
+            ],
         }
     },
     "include": [
