feat: enhance UI components and styles; integrate new AiGenerationButton and explanation styles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -54,6 +54,9 @@
             "store/*": [
                 "store/index.ts"
             ],
+            "icons/*": [
+                "components/icons/index.ts"
+            ],
         }
     },
     "include": [
