feat: refactor chunk and meta text components; streamline imports, adjust styles, and enhance layout consistency

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -54,9 +54,12 @@
             "store/*": [
                 "store/index.ts"
             ],
-            "icons/*": [
-                "components/icons/index.ts"
+            "icons": [
+                "components/icons/index.tsx"
             ],
+            // "icons/*": [
+            //     "components/icons/*"
+            // ],
         }
     },
     "include": [
