feat: refactor imports and restructure constants; update import paths for consistency, restore constants file, and enhance service exports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,6 +57,9 @@
             "icons": [
                 "components/icons/index.tsx"
             ],
+            "services/*": [
+                "services/index.ts"
+            ],
             // "icons/*": [
             //     "components/icons/*"
             // ],
