--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,9 +60,9 @@
             "services/*": [
                 "services/index.ts"
             ],
-            // "icons/*": [
-            //     "components/icons/*"
-            // ],
+            "types/*": [
+                "types/index.ts"
+            ],
         }
     },
     "include": [
