--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "start:backend": "uvicorn backend.main:app --reload --host 0.0.0.0 --port 3001 --ssl-keyfile=certs/key.pem --ssl-certfile=certs/cert.pem",
     "start": "npm-run-all --parallel start:frontend start:backend",
     "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "docs:api": "typedoc",
+    "docs:serve": "npx http-server docs -p 3003",
+    "docs:watch": "typedoc --watch",
+    "docs:dev": "npm-run-all --parallel docs:watch docs:serve"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -46,6 +50,9 @@
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
     "npm-run-all": "^4.1.5",
+    "typedoc": "^0.28.7",
+    "typedoc-plugin-markdown": "^4.7.0",
+    "typedoc-theme-hierarchy": "^6.0.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vitest": "^3.2.4"
