refactor: enhance documentation comments across components; update styles and imports; remove unused README file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,6 +63,9 @@
             "types/*": [
                 "types/index.ts"
             ],
+            "styles/*": [
+                "styles/index.ts"
+            ],
         }
     },
     "include": [
