--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "typedoc-theme-hierarchy": "^6.0.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   }
 }
