refactor: update flashcard and review components to improve structure and styling, add new dependencies, and enhance user experience

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.1.0",
+    "html-react-parser": "^5.2.5",
     "loglevel": "^1.9.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
