feat(ChunkWords): add merge chunks button to enhance word selection functionality

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ backend/erd_from_sqlite.pdf
 src/pages/MetaTextPage/Additional Enhancements to Consider.md
 package-lock.json
 nginx_config.pl
+crito_symbol.svg
+socrates_crito_dawn.svg
