feat: implement bookmark management API and service functions
- Added API endpoints for getting and setting user bookmarks in `bookmark.py`.
- Created service functions for bookmark management in `bookmark_service.py`, including logic to retrieve and set bookmarks for specific metatexts.
- Introduced utility function `resetAppState` in `resetAppState.ts` to clear user-specific app state and cache on logout or user switch, ensuring data privacy between users.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ dependencies = [
     "sqlmodel",
     "fastapi-cors",
     "openai>=1.82.0",
-    "python-freedictionaryapi[async-client]>=0.9.10",
     "pytest>=8.4.0",
     "python-dotenv>=1.1.0",
     "passlib[bcrypt]>=1.7.4",
@@ -19,6 +18,8 @@ dependencies = [
     "eralchemy[graphviz]>=1.5.0",
     "alembic>=1.16.1",
     "pytest-asyncio>=1.0.0",
+    "python-multipart>=0.0.20",
+    "pyjwt>=2.10.1",
 ]
 [tool.alembic]
 
