--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start:frontend": "npm run dev",
-    "start:backend": "uvicorn backend.main:app --reload --host 0.0.0.0 --port 3001 --ssl-keyfile=certs/key.pem --ssl-certfile=certs/cert.pem",
+    "start:backend": "uvicorn backend.main:app --reload --host 0.0.0.0 --port 3001",
     "start": "npm-run-all --parallel start:frontend start:backend",
     "test": "vitest",
     "test:ui": "vitest --ui",
