--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.1.0",
+    "@tanstack/react-query": "^5.83.0",
     "html-react-parser": "^5.2.5",
+    "ky": "^1.8.2",
     "loglevel": "^1.9.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@faker-js/faker": "^9.8.0",
+    "@tanstack/react-query-devtools": "^5.83.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
