--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "docs:dev": "npm-run-all --parallel docs:watch docs:serve"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.22.0",
+    "@emotion/react": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.1.0",
     "@tanstack/react-query": "^5.83.0",
     "html-react-parser": "^5.2.5",
     "ky": "^1.8.2",
     "loglevel": "^1.9.2",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.1",
     "react-window": "^1.8.11",
