--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
         "strict": true,
         "forceConsistentCasingInFileNames": true,
         "module": "ESNext",
-        "moduleResolution": "Node",
+        "moduleResolution": "bundler",
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
@@ -33,6 +33,9 @@
         // Path aliases
         "baseUrl": "src",
         "paths": {
+            "@/*": [
+                "./src/*"
+            ],
             "utils/*": [
                 "utils/index.ts",
             ],
