feat: update WelcomeText component styles and enhance Chakra UI theme configuration with semantic tokens and reusable text styles

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ package-lock.json
 nginx_config.pl
 crito_symbol.svg
 socrates_crito_dawn.svg
+.github/llms-components.txt
+.github/llms-styling.txt
+.github/llms-theming.txt
