--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pytest-asyncio>=1.0.0",
     "python-multipart>=0.0.20",
     "pyjwt>=2.10.1",
+    "fastapi-users[sqlalchemy]>=14.0.1",
 ]
 [tool.alembic]
 
