--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.1",
     "react-window": "^1.8.11",
     "zustand": "^5.0.5"
@@ -59,6 +58,7 @@
     "jsdom": "^26.1.0",
     "npm-run-all": "^4.1.5",
     "resize-observer-polyfill": "^1.5.1",
+    "rollup-plugin-visualizer": "^6.0.3",
     "typedoc": "^0.28.7",
     "typedoc-plugin-markdown": "^4.7.0",
     "typedoc-theme-hierarchy": "^6.0.0",
