--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@chakra-ui/cli": "^3.24.0",
     "@eslint/js": "^9.25.0",
     "@faker-js/faker": "^9.8.0",
     "@tanstack/react-query-devtools": "^5.83.0",
