--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@vitest/ui": "^3.2.3",
     "dependency-cruiser": "^16.10.2",
     "eslint": "^9.25.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
