Refactor HomePage and related components into sections
- Moved Metatext and Source Document functionalities from pages to sections for better modularity.
- Created MetatextManager and SourceDocumentsManager to handle respective functionalities.
- Removed obsolete MetatextPage and SourceDocPage components.
- Updated HomePage to utilize new section managers.
- Refactored hooks and forms related to Metatext and Source Document uploads.
- Adjusted tests to reflect changes in component structure and functionality.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,6 +66,9 @@
             "@mtypes/*": [
                 "src/types/*"
             ],
+            "@sections/*": [
+                "src/sections/*"
+            ]
         }
     },
     "include": [
