--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
+    "madge": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "resize-observer-polyfill": "^1.5.1",
     "rollup-plugin-visualizer": "^6.0.3",
