Refactor components to use Stitches for styling; migrate from Chakra UI to Stitches in SourceDoc, MetatextCreateForm, SourceDocFilePicker, SourceDocUploadForm, and UploadFileStatusList. Update theme management and remove Chakra UI theme configuration. Enhance file upload handling and improve accessibility features across components. Clean up imports and adjust file structure for better organization.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,6 +68,9 @@
             ],
             "@sections/*": [
                 "src/sections/*"
+            ],
+            "@styles": [
+                "src/stitches.config.ts"
             ]
         }
     },
