--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "docs:dev": "npm-run-all --parallel docs:api:watch docs:serve"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^3.23.0",
-    "@emotion/react": "^11.14.0",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@stitches/react": "^1.2.8",
     "@tanstack/react-query": "^5.83.0",
     "html-react-parser": "^5.2.5",
     "ky": "^1.8.2",
@@ -38,7 +40,6 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@chakra-ui/cli": "^3.24.0",
     "@eslint/js": "^9.25.0",
     "@faker-js/faker": "^9.8.0",
     "@tanstack/react-query-devtools": "^5.83.0",
