refactor: update exports in index.ts for SourceDocInfo and add KeyboardShortcutsDisplay; streamline imports in MetatextHeader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,9 @@
             "@hooks/*": [
                 "src/hooks/*"
             ],
+            "@components": [
+                "src/components/"
+            ],
             "@components/*": [
                 "src/components/*"
             ],
