--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "pyjwt>=2.10.1",
     "fastapi-users[sqlalchemy]>=14.0.1",
+    "slowapi>=0.1.9",
 ]
 [tool.alembic]
 
