--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@stitches/react": "^1.2.8",
     "@tanstack/react-query": "^5.83.0",
+    "hotkeys-js": "^3.13.15",
     "html-react-parser": "^5.2.5",
     "ky": "^1.8.2",
     "loglevel": "^1.9.2",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hotkeys-hook": "^5.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "react-window": "^1.8.11",
