--- a/tsconfig.json
+++ b/tsconfig.json
@@ -82,8 +82,6 @@
     ],
     "exclude": [
         "node_modules",
-        "dist",
-        "**/*.test.ts",
-        "**/*.test.tsx"
+        "dist"
     ]
 }
